:bug: [Fix]: search page 에서 멘토 리스트 overflow 되는 문제 해결
- +button 색상 변경

--- a/42manito/src/styles/search.css
+++ b/42manito/src/styles/search.css
@@ -6,5 +6,5 @@
 }
 
 .search-container {
-  @apply flex flex-col items-center justify-center w-[80%] md:w-[900px];
+  @apply flex flex-col items-center justify-center w-[80%] md:w-[600px] lg:w-[900px] mx-auto;
 }
